# BiggerBrotherWebApp

./: .gitignore  .pre-commit-config.yaml  README.md  profile.pstats  pyproject.toml  report.xml  requirements.txt
.github/workflows/: ci.yml
src/: __init__.py  bigger_brother.py  exercise.py  exercises.py  landmark_dicts.py  model.py
src/analysis/: compute_1RM.py  compute_VL_curve.py  compute_metrics.py  compute_rep.py  compute_rep_metrics.py  compute_reps.py  estimate_rir.py  loss_velocity.py  metrics.py  pose_estimator.py  rep_detection.py  video_processing.py  visualiser.py
src/dto/: exercise.py  frame_data.py  input_config.py  landmark_dict.py  rep_metric.py  results.py
src/utils/: angle.py  kinematics.py  utils.py  velocity.py
tests/: conftest.py
tests/e2e/: test_bigger_brother_analyse_reps.py  test_bigger_brother_estimate_rir.py
tests/integration/: test_pose_estimator_inte.py
tests/integration/analysis/: test_compute_metrics_integration.py  test_pose_estimator_integration.py
tests/unit/: test_exercise.py  test_frame_data.py  test_landmark_dicts.py  test_landmarks.py  test_utils.py  test_velocity.py
tests/unit/analysis/: test_compute_VL_curve.py  test_compute_reps.py  test_pose_estimator.py
tests/unit/dto/: test_exercise.py  test_frame_data.py
tests/unit/utils/: test_angle.py  test_utils.py  test_velocity.py
